--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,15 @@
+<% if @book.errors.any? %>
+          <div id="error_explanation">
+            <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+           
+              <ul>
+                  <% @book.errors.full_messages.each do |msg| %>
+                      <li><%= msg %></li>
+                  <% end %>
+              </ul>
+          </div>
+      <% end %>
+
 <div class="row">
 	<div class="col-xs-3">
 
@@ -6,7 +18,21 @@
 		<!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
 
 		<h2>New book</h2>
-		<%= render 'books/newform', book: @book %>
+		<%= form_for(@book) do |f| %>
+			<div class="field row">
+				<%= f.label :title %>
+				<%= f.text_field :title, class: "col-xs-12 book_title" %>
+			</div>
+
+			<div class="field row">
+				<%= f.label :body %> <!-- ここを変更 -->
+				<%= f.text_area :body, class: "col-xs-12 book_body" %>
+			</div>
+
+			<div class="actions row">
+				<%= f.submit class: "btn btn-primary col-xs-12" %>
+			</div>
+		<% end %>
 
 	</div>
 
