--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,35 +1,70 @@
-<h2>User info</h2>
-<%= render 'users/profile', user: @user %>
-<!--同コントローラーのviewで表示ならusersは省略可 -->
+<% if @newbook.errors.any? %>
+          <div id="error_explanation">
+            <h3><%= @newbook.errors.count %> error prohibited this obj from being saved:</h3>
+           
+              <ul>
+                  <% @newbook.errors.full_messages.each do |msg| %>
+                      <li><%= msg %></li>
+                  <% end %>
+              </ul>
+          </div>
+      <% end %>
 
-<h2>New book</h2>
-<%= render 'books/newform', book: @book %>
 
-<h2>Books</h2>
-<!--books一覧 -->
-<table class="table table-hover table-inverse">
-	<thead>
-		<tr>
-			<th></th>
-			<th>Title</th>
-			<th>Opinion</th>
-			<th colspan="3"></th>
-		</tr>
-	</thead>
+<div class="row">
+	<div class="col-xs-3">
+		<h2>User info</h2>
+		<table class="table">
+				<tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg", size:'100x100' %></tr>
 
-	<tbody>
-		<% books.each do |book| %>
-		<tr>
-			<td>
-				<%= link_to (book.user) do %>
-				<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+				<tr>
+					<th>name</th>
+					<th><%= @user.name %></th>
+				</tr>
+
+				<tr>
+					<th>introduction</th>
+					<th><%= @user.introduction %></th>
+				</tr>
+		</table>
+
+		<div class="row">
+			<%= link_to '',edit_user_path(@user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{@user.id}" %>
+		</div>
+		<!--同コントローラーのviewで表示ならusersは省略可 -->
+
+		<h2>New book</h2>
+		<%= render 'books/newform', book: @book %>
+	</div>
+
+	<div class="col-xs-9">
+		<h2>Books</h2>
+		<!--books一覧 -->
+		<table class="table table-hover table-inverse">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Title</th>
+					<th>Opinion</th>
+					<th colspan="3"></th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<% @user.books.each do |book| %>
+				<tr>
+					<td>
+						<%= link_to (book.user) do %>
+						<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+						<% end %>
+					</td>
+					<td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
+					<td><%= book.body %></td>
+				</tr>
 				<% end %>
-			</td>
-			<td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
-			<td><%= book.body %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+			</tbody>
+		</table>
+	</div>
+</div>
 <!--books一覧 -->
 
