[Finish] bookers2-debug

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,39 @@
+<% if @book.errors.any? %>
+					      <div id="error_explanation">
+					        <h4><%= @book.errors.count %> error prohibited this obj from being saved:</h4>
+					 
+					        <ul>
+					          <% @book.errors.full_messages.each do |msg| %>
+					            <li><%= msg %></li>
+					          <% end %>
+					        </ul>
+					      </div>
+					    <% end %>
+
 <div class="row">
-<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-6 col-md-offset-3">
 
-<h1>Editing Book</h1>
+		<h1>Editing Book</h1>
+		<%= form_for(@book) do |b| %>
 
-<%= render "books/newform", book: @book %>
-<%= link_to "Show", @book, class: "book_#{@book.id}" %>
-<%= link_to "Back", books_path, class: "back" %>
+			<div class="field row">
+				<%= b.label :title, "Title" %>
+				<p><%= b.text_field :title, class: "col-xs-12" %></p>
+			</div>
 
-</div>
-<div class="col-md-3"></div>
+			<div class="field row">
+				<%= b.label :body, "Opinion" %>
+				<p><%= b.text_area :body, class: "col-xs-12" %></p>
+			</div>
+
+			<div class="action row">
+				<%= b.submit 'Update Book', class: "col-xs-12 btn btn-primary" %>
+			</div>
+		<% end %>
+		<%= link_to "Show", @book, class: "book_#{@book.id}" %>
+		<%= link_to "Back", books_path, class: "back" %>
+
+	</div>
+	<div class="col-md-3"></div>
 
 </div>
