--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,16 +15,16 @@
 
 		<h2>User info</h2>
 		<table class="table">
-				<tr><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg", size:'100x100' %></tr>
+				<tr><%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg", size:'100x100' %></tr>
 
 				<tr>
 					<th>name</th>
-					<th><%= @user.name %></th>
+					<th><%= @book.user.name %></th>
 				</tr>
 
 				<tr>
 					<th>introduction</th>
-					<th><%= @user.introduction %></th>
+					<th><%= @book.user.introduction %></th>
 				</tr>
 		</table>
 
@@ -41,19 +41,24 @@
 		<h2>Book detail</h2>
 
 		<table class="table">
+			<tbody>
 				<tr>
-					<td>
-						<%= link_to (@book.user) do %>
-						<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-						<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, @book %></td>
-					<td><%= @book.body %></td>
-					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+					
+					<td><%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg", size:'100x100' %><p><%= link_to @book.user.name, user_path(@user) %></p></td>
+				    <td><%= @book.title %></td>
+				    <td><%= @book.body %></td>
+				    <% if @book.user_id == current_user.id %>
+					    <td>
+						    <%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %>
+						</td>
+						<td>
+						    <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に消しますか?"}, class: "btn btn-danger" %>
+						</td>
+					<% end %>
+
 				</tr>
-			</table>
+			</tbody>
+		</table>
 
 	</div>
 </div>
