--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,15 +52,11 @@
 
 			<tbody>
 				<% @user.books.each do |book| %>
-				<tr>
-					<td>
-						<%= link_to (book.user) do %>
-						<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
-						<% end %>
-					</td>
-					<td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
-					<td><%= book.body %></td>
-				</tr>
+				    <tr>
+				        <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg", size:'50x50' %></td>
+				        <td><%= link_to book.title, book_path(book) %></td>
+				        <td><%= book.body %></td>
+				    </tr>
 				<% end %>
 			</tbody>
 		</table>
